# hatch

./: .atom-build.yaml  build.sh  glossy-workshop.cabal  hatch.cabal  part1  part2  stack.yaml
src/: Images.hs  Main.hs  Part1.hs  Part2.hs  Transforms.hs  Workshop.hs
src/hatch/: Images.hs  Layout.hs  Main1.hs  Main2.hs  Transforms.hs  Workshop.hs
