name:                hatch
version:             0.1.0.0
-- synopsis:
-- description:
homepage:
license:             BSD3
author:              Alex Dixon (dixonary)
maintainer:          alexander.dixon@warwick.ac.uk
copyright:           2018 Alex Dixon
category:            Web
build-type:          Simple
cabal-version:       >=1.10
data-files:          *.png
data-dir:            assets

executable part1
  hs-source-dirs:      src, src/hatch
  main-is:             Main1.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, gloss, gloss-game
  other-modules:       Images, Layout, Transforms, Workshop, Part1, Paths_hatch

executable part2
  hs-source-dirs:      src, src/hatch
  main-is:             Main2.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, gloss, gloss-game
  other-modules:       Images, Layout, Transforms, Workshop, Part2, Paths_hatch
